--- a/allaprima.html
+++ b/allaprima.html
@@ -7,13 +7,14 @@
     <title>Robin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="logo.jpg">
+    <link rel="stylesheet" media="(max-width: 399px)" href="styles-responsive.css" />
+    <link rel="stylesheet" media="(min-width: 1000px)" href="styles.css" />
 </head>
 <body>
     <div class="container-fluid">
         <div class="row" id="todo">
-          <div class="col align-self-center d-fjustify-content-around">
+          <div class="col-xl-6 align-self-center d-fjustify-content-around">
               <div class="text-base ">
                 <h3>Robin Hannon Losada</h3>
                 <hr class="sin">
@@ -46,10 +47,13 @@
               </div>
             
           </div>
-          <div class="col ">
-            <strong class="titulo">Allaprima</strong>
-            <hr>
-            <embed src="/porfolio/diseño gráfico/allaprima/allaprima .pdf" type="" width="100%" height="100%">
+          <div class="col-xl-6 ">
+              <div class="contenido2">
+                <strong class="titulo">Allaprima</strong>
+                <hr>
+                <embed src="/porfolio/diseño gráfico/allaprima/allaprima .pdf" type="" width="100%" height="100%">
+              </div>
+           
           </div>
         </div>
     </div>
