--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Robin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" media="(max-width: 399px)" href="styles-responsive.css" />
+    <link rel="stylesheet" media="(min-width: 1000px)" href="styles.css" />
+
     <link rel="shortcut icon" href="logo.jpg">
 </head>
 <body>
     <div class="container-fluid d-flex flex-column" id="contenedor">
-        <div class="row">
+        <div class="row" id="columna-1">
           <div class="col align-self-center d-fjustify-content-around">
               <div class="text-base ">
                 <h3>Robin Hannon Losada</h3>
@@ -33,7 +35,7 @@
                         </ul>
                     </div>
                     <div class="col text-center">
-                        <a href="Fotografia.html" class="text-decoration-none text-dark"><p>Fotografía</p></a>
+                        <a href="Fotografia.html" class="text-decoration-none text-dark" id="foto"><p>Fotografía</p></a>
                         <ul></ul>
                     </div>
                     <hr class="sin">
@@ -45,7 +47,7 @@
               </div>
             
           </div>
-          <div class="col">
+          <div class="col" id="columna-2">
             <div class="fotos">
             
         </div>
