--- a/logoEcuador.html
+++ b/logoEcuador.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="logo.jpg">
     <link rel="stylesheet" media="(max-width: 450px)" href="styles-responsive.css" />
+    <link rel="stylesheet" media="(max-width: 1000px)" href="styles-responsive.css" />
     <link rel="stylesheet" media="(min-width: 1000px)" href="styles.css" />
 </head>
 <body>
@@ -26,10 +27,10 @@
                             <li><a href="allaprima.html" class="text-decoration-none text-dark">Allaprima</a></li>
                             <li><a href="infografia.html" class="text-decoration-none text-dark">Infografía</a></li> 
                             <li><a href="inhiver.html" class="text-decoration-none text-dark">Inhiveler</a></li> 
-                             <li><a href="logoEcuador.html" class="text-decoration-none text-dark">Logo Ecuador USC</a></li>
-                            <li> <a href="logoUllin.html" class="text-decoration-none text-dark">Logo Uillin</a></li>
+                             <li><a href="logoEcuador.html" class="text-decoration-none text-dark">Logo Paso de Ecuador USC</a></li>
+                            <li> <a href="logoUllin.html" class="text-decoration-none text-dark">Logo Uillinn</a></li>
                              <li><a href="manualIdentidad.html" class="text-decoration-none text-dark">Manual de Identidad</a></li>
-                             <li><a href="Posters.html" class="text-decoration-none text-dark">Posters</a></li>
+                             <li><a href="Posters.html" class="text-decoration-none text-dark">Pósteres</a></li>
                              
                             
                         </ul>
