--- a/logoUllin.html
+++ b/logoUllin.html
@@ -50,7 +50,7 @@
           </div>
           <div class="col-xl-6">
             <div class="fotos">
-            <strong class="titulo">Logo Uillinn</strong>
+            <strong class="titulo"><a href="https://www.instagram.com/ro.jamon/" class="insta">Instagram</a></strong>
             <hr>
             <img src="/porfolio/diseño gráfico/logo Uillin/1.jpg" alt="" class="img-fluid ">
             <img src="/porfolio/diseño gráfico/logo Uillin/2.jpg" alt="" class="img-fluid">
