--- a/Posters.html
+++ b/Posters.html
@@ -40,7 +40,7 @@
                     </div>
                     <hr class="sin">
                     <div class="row">
-                        <div class="col">prueba</div>
+                        <div class="col"><a href="https://www.instagram.com/ro.jamon/" class="insta">Instagram</a></div>
                         <div class="col">correoelectronico</div>
                     </div>
                 </div>
