--- a/Posters.html
+++ b/Posters.html
@@ -41,7 +41,7 @@
                     <hr class="sin">
                     <div class="row">
                         <div class="col"><a href="https://www.instagram.com/ro.jamon/" class="insta">Instagram</a></div>
-                        <div class="col">correoelectronico</div>
+                        <div class="col">robin.hnlg@gmail.com</div>
                     </div>
                 </div>
               </div>
