--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="row" id="columna-1">
           <div class="col align-self-center d-fjustify-content-around">
               <div class="text-base ">
-                <h3>Robin Hannon Losada</h3>
+                <a href="robin.html" class="fotoro"><h3>Robin Hannon Losada</h3></a>  
                 <hr class="sin">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloremque dolore blanditiis. Quam, architecto nulla? Iste nam minus mollitia ea possimus voluptatem accusamus. Voluptatum eligendi hic dignissimos dolorum repellendus sed.</p>
                 <div class="row"> 
