--- a/robin.html
+++ b/robin.html
@@ -17,7 +17,7 @@
         <div class="row">
           <div class="col-xl-6 align-self-center d-flex justify-content-around ">
               <div class="text-base ">
-                <a href="robin.html" class="fotoro"><h3>Robin Hannon Losada</h3></a>  
+              <a href="robin.html" class="fotoro"><h3>Robin Hannon Losada</h3></a>  
                 <hr class="sin">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloremque dolore blanditiis. Quam, architecto nulla? Iste nam minus mollitia ea possimus voluptatem accusamus. Voluptatum eligendi hic dignissimos dolorum repellendus sed.</p>
                 <div class="row"> 
@@ -50,17 +50,10 @@
           </div>
           <div class="col-xl-6">
             <div class="fotos">
-            <strong class="titulo">Fotos (2018-2021)</strong>
+            <strong class="titulo">me</strong>
             <hr>
-            <img src="/porfolio/trabajos fotografía/DSC_0461.jpg" alt="" class="img-fluid ">
-            <img src="/porfolio/trabajos fotografía/DSC_1095[1].jpg" alt="" class="img-fluid">
-            <img src="/porfolio/trabajos fotografía/DSC_1802.jpg" alt="" class="img-fluid">
-            <img src="/porfolio/trabajos fotografía/DSC_1398.jpg" alt="" class="img-fluid">
-            <img src="/porfolio/trabajos fotografía/3.jpg" alt=""class="img-fluid">
-            <img src="/porfolio/trabajos fotografía/DSC_1668.jpg" alt=""class="img-fluid">
-            <img src="/porfolio/trabajos fotografía/Plegarias_Robin Hannon Losada.jpg" alt=""class="img-fluid">
-            <img src="/porfolio/trabajos fotografía/tlcwwt1 - copia.jpg" alt=""class="img-fluid">
-            <img src="/porfolio/trabajos fotografía/tlcwwtsergio2.jpg" alt=""class="img-fluid">
+            <img src="/porfolio/foto.jpeg" alt="" id="fotoRobin">
+            
         </div>
           </div>
         </div>
