--- a/logoUllin.html
+++ b/logoUllin.html
@@ -17,7 +17,7 @@
         <div class="row">
           <div class="col-xl-6 align-self-center d-flex justify-content-around">
               <div class="text-base ">
-                <h3>Robin Hannon Losada</h3>
+                <a href="robin.html" class="fotoro"><h3>Robin Hannon Losada</h3></a>  
                 <hr class="sin">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloremque dolore blanditiis. Quam, architecto nulla? Iste nam minus mollitia ea possimus voluptatem accusamus. Voluptatum eligendi hic dignissimos dolorum repellendus sed.</p>
                 <div class="row"> 
