--- a/logoEcuador.html
+++ b/logoEcuador.html
@@ -15,19 +15,20 @@
 <body>
     <div class="container-fluid d-flex h-100 flex-column">
         <div class="row">
-          <div class="col-xl-6 align-self-center d-flex justify-content-around">
+          <div class="col-xl-6 align-self-center d-flex ">
               <div class="text-base ">
                 <a href="robin.html" class="fotoro"><h3>Robin Hannon Losada</h3></a>  
                 <hr class="sin">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloremque dolore blanditiis. Quam, architecto nulla? Iste nam minus mollitia ea possimus voluptatem accusamus. Voluptatum eligendi hic dignissimos dolorum repellendus sed.</p>
-                <div class="row"> 
+                <p>Hola, soy Robin, estudiante de cuarto de diseño gráfico (en la escuela EASD Antonio Faílde)
+                    y fotógrafa amateur.</p>               
+                     <div class="row"> 
                     <div class="col lista">
                         <a href="" class="text-decoration-none text-dark"><p>Diseño Gráfico</p></a>
                         <ul>
                             <li><a href="allaprima.html" class="text-decoration-none text-dark">Allaprima</a></li>
                             <li><a href="infografia.html" class="text-decoration-none text-dark">Infografía</a></li> 
                             <li><a href="inhiver.html" class="text-decoration-none text-dark">Inhiveler</a></li> 
-                             <li><a href="logoEcuador.html" class="text-decoration-none text-dark">Logo Paso de Ecuador USC</a></li>
+                             <li><a href="logoEcuador.html" class="text-decoration-none text-dark"> Paso de Ecuador USC</a></li>
                             <li> <a href="logoUllin.html" class="text-decoration-none text-dark">Logo Uillinn</a></li>
                              <li><a href="manualIdentidad.html" class="text-decoration-none text-dark">Manual de Identidad</a></li>
                              <li><a href="Posters.html" class="text-decoration-none text-dark">Pósteres</a></li>
@@ -50,7 +51,11 @@
           </div>
           <div class="col-xl-6">
             <div class="fotos">
-            <strong class="titulo ecuador">Logo paso de Ecuador (USC historia)</strong>
+            <strong class="titulo ecuador">Paso de Ecuador USC </strong>
+            <p></p>
+            <p>Este fue un pequeño proyecto de branding, donde se creó el imagotipo para un paso de
+                ecuador de la facultad de geografía e historia de la USC. El imagotipo está inspirado en la
+                pintura de Atenea que hay en el paraninfo de la universidad.</p>
             <hr>
             <img src="/porfolio/diseño gráfico/logo paso de ecuador usc historia/mockup 1.jpg" alt="" class="img-fluid ">
             <img src="/porfolio/diseño gráfico/logo paso de ecuador usc historia/solo ilustración bn.jpg" alt="" class="img-fluid">
