--- a/allaprima.html
+++ b/allaprima.html
@@ -15,19 +15,20 @@
 <body>
     <div class="container-fluid">
         <div class="row" id="todo">
-          <div class="col-xl-6 align-self-center d-fjustify-content-around">
+          <div class="col-xl-6 align-self-center d-flex">
               <div class="text-base ">
                 <a href="robin.html" class="fotoro"><h3>Robin Hannon Losada</h3></a>  
                 <hr class="sin">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloremque dolore blanditiis. Quam, architecto nulla? Iste nam minus mollitia ea possimus voluptatem accusamus. Voluptatum eligendi hic dignissimos dolorum repellendus sed.</p>
-                <div class="row"> 
+                <p>Hola, soy Robin, estudiante de cuarto de diseño gráfico (en la escuela EASD Antonio Faílde)
+                    y fotógrafa amateur.</p>               
+                 <div class="row"> 
                     <div class="col lista">
                         <a href="" class="text-decoration-none text-dark"><p>Diseño Gráfico</p></a>
                         <ul>
                             <li><a href="allaprima.html" class="text-decoration-none text-dark">Allaprima</a></li>
                            <li><a href="infografia.html" class="text-decoration-none text-dark">Infografía</a></li> 
                            <li><a href="inhiver.html" class="text-decoration-none text-dark">Inhiveler</a></li> 
-                            <li><a href="logoEcuador.html" class="text-decoration-none text-dark">Logo Paso de Ecuador USC</a></li>
+                            <li><a href="logoEcuador.html" class="text-decoration-none text-dark">Paso de Ecuador USC</a></li>
                            <li> <a href="logoUllin.html" class="text-decoration-none text-dark">Logo Uillinn</a></li>
                             <li><a href="manualIdentidad.html" class="text-decoration-none text-dark">Manual de Identidad</a></li>
                             <li><a href="Posters.html" class="text-decoration-none text-dark">Pósteres</a></li>
@@ -51,6 +52,11 @@
           <div class="col-xl-6 ">
             <div class="fotos">
                 <strong class="titulo">Allaprima</strong>
+                <p></p>
+                <p>Allaprima es un proyecto editorial que se hizo como una campaña de concienciación sobre
+                    la terapia artística y la creatividad de personas con neurodiversidades. Para ello nos juntamos con distintas personas neurotípicas y neurodiversidades y asociaciones como la de
+                    Autismo de Ourense, Down Ourense... para llevar a cabo una serie de talleres. Este fue el
+                    resultado.</p>
                 <hr>
                 <img src="/porfolio/pdfs a jps/allaprima/1.jpg" alt="" class="img-fluid ">
                 <img src="/porfolio/pdfs a jps/allaprima/2.jpg" alt="" class="img-fluid ">
