--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 <body>
     <div class="container-fluid d-flex flex-column" id="contenedor">
         <div class="row" id="columna-1">
-          <div class="col align-self-center d-fjustify-content-around">
+          <div class="col align-self-center d-flex">
               <div class="text-base ">
                 <a href="robin.html" class="fotoro"><h3>Robin Hannon Losada</h3></a>  
                 <hr class="sin">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloremque dolore blanditiis. Quam, architecto nulla? Iste nam minus mollitia ea possimus voluptatem accusamus. Voluptatum eligendi hic dignissimos dolorum repellendus sed.</p>
+                <p>Hola, soy Robin, estudiante de cuarto de diseño gráfico (en la escuela EASD Antonio Faílde)
+                    y fotógrafa amateur.</p>
                 <div class="row"> 
                     <div class="col lista">
                         <a href="" class="text-decoration-none text-dark"><p>Diseño Gráfico</p></a>
@@ -28,7 +29,7 @@
                             <li><a href="allaprima.html" class="text-decoration-none text-dark">Allaprima</a></li>
                            <li><a href="infografia.html" class="text-decoration-none text-dark">Infografía</a></li> 
                            <li><a href="inhiver.html" class="text-decoration-none text-dark">Inhiveler</a></li> 
-                            <li><a href="logoEcuador.html" class="text-decoration-none text-dark">Logo Paso de Ecuador USC</a></li>
+                            <li><a href="logoEcuador.html" class="text-decoration-none text-dark">Paso de Ecuador USC</a></li>
                            <li> <a href="logoUllin.html" class="text-decoration-none text-dark">Logo Uillinn</a></li>
                             <li><a href="manualIdentidad.html" class="text-decoration-none text-dark">Manual de Identidad</a></li>
                             <li><a href="Posters.html" class="text-decoration-none text-dark">Pósteres</a></li>
