--- a/infografia.html
+++ b/infografia.html
@@ -15,11 +15,12 @@
 <body>
     <div class="container-fluid">
         <div class="row" id="todo">
-          <div class="col-xl-6 align-self-center d-flex justify-content-around">
+          <div class="col-xl-6 align-self-center d-flex ">
               <div class="text-base ">
                 <a href="robin.html" class="fotoro"><h3>Robin Hannon Losada</h3></a>  
                 <hr class="sin">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloremque dolore blanditiis. Quam, architecto nulla? Iste nam minus mollitia ea possimus voluptatem accusamus. Voluptatum eligendi hic dignissimos dolorum repellendus sed.</p>
+                <p>Hola, soy Robin, estudiante de cuarto de diseño gráfico (en la escuela EASD Antonio Faílde)
+                    y fotógrafa amateur.</p>
                 <div class="row"> 
                     <div class="col lista">
                         <a href="" class="text-decoration-none text-dark"><p>Diseño Gráfico</p></a>
@@ -27,7 +28,7 @@
                             <li><a href="allaprima.html" class="text-decoration-none text-dark">Allaprima</a></li>
                             <li><a href="infografia.html" class="text-decoration-none text-dark">Infografía</a></li> 
                             <li><a href="inhiver.html" class="text-decoration-none text-dark">Inhiveler</a></li> 
-                             <li><a href="logoEcuador.html" class="text-decoration-none text-dark">Logo Paso de Ecuador USC</a></li>
+                             <li><a href="logoEcuador.html" class="text-decoration-none text-dark">Paso de Ecuador USC</a></li>
                             <li> <a href="logoUllin.html" class="text-decoration-none text-dark">Logo Uillinn</a></li>
                              <li><a href="manualIdentidad.html" class="text-decoration-none text-dark">Manual de Identidad</a></li>
                              <li><a href="Posters.html" class="text-decoration-none text-dark">Pósteres</a></li>
@@ -51,6 +52,9 @@
           <div class="col-xl-6">
             <div class="fotos">
                 <strong class="titulo">Infografía</strong>
+                <p></p>
+                <p>Esta infografía fue un proyecto de clase que se hizo con la intención de explicar la normativa 
+                    covid que se debía de seguir dentro de la escuela a alumnos recién llegados.</p>
                 <hr>
                 <img src="/porfolio/pdfs a jps/inforgrafía/Infografía final.jpg" alt="" class="img-fluid ">
               
