--- a/logoUllin.html
+++ b/logoUllin.html
@@ -15,11 +15,12 @@
 <body>
     <div class="container-fluid d-flex h-100 flex-column">
         <div class="row">
-          <div class="col-xl-6 align-self-center d-flex justify-content-around">
+          <div class="col-xl-6 align-self-center d-flex ">
               <div class="text-base ">
                 <a href="robin.html" class="fotoro"><h3>Robin Hannon Losada</h3></a>  
                 <hr class="sin">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloremque dolore blanditiis. Quam, architecto nulla? Iste nam minus mollitia ea possimus voluptatem accusamus. Voluptatum eligendi hic dignissimos dolorum repellendus sed.</p>
+                <p>Hola, soy Robin, estudiante de cuarto de diseño gráfico (en la escuela EASD Antonio Faílde)
+                    y fotógrafa amateur.</p>
                 <div class="row"> 
                     <div class="col lista">
                         <a href="" class="text-decoration-none text-dark"><p>Diseño Gráfico</p></a>
@@ -27,7 +28,7 @@
                             <li><a href="allaprima.html" class="text-decoration-none text-dark">Allaprima</a></li>
                            <li><a href="infografia.html" class="text-decoration-none text-dark">Infografía</a></li> 
                            <li><a href="inhiver.html" class="text-decoration-none text-dark">Inhiveler</a></li> 
-                            <li><a href="logoEcuador.html" class="text-decoration-none text-dark">Logo Paso de Ecuador USC</a></li>
+                            <li><a href="logoEcuador.html" class="text-decoration-none text-dark">Paso de Ecuador USC</a></li>
                            <li> <a href="logoUllin.html" class="text-decoration-none text-dark">Logo Uillinn</a></li>
                             <li><a href="manualIdentidad.html" class="text-decoration-none text-dark">Manual de Identidad</a></li>
                             <li><a href="Posters.html" class="text-decoration-none text-dark">Pósteres</a></li>
@@ -50,7 +51,11 @@
           </div>
           <div class="col-xl-6">
             <div class="fotos">
-            <strong class="titulo"><a href="https://www.instagram.com/ro.jamon/" class="insta">Instagram</a></strong>
+            <strong class="titulo">Logo Uillinn</strong>
+            <p></p>
+            <p>Este proyecto fue un encargo por parte de un centro de artes y cultura de Cork, Irlanda
+                (Uillinn West Cork arts centre). Se basó en crear el logotipo para el festival de danza que se
+                lleva a cabo cada año.</p>
             <hr>
             <img src="/porfolio/diseño gráfico/logo Uillin/1.jpg" alt="" class="img-fluid ">
             <img src="/porfolio/diseño gráfico/logo Uillin/2.jpg" alt="" class="img-fluid">
