--- a/manualIdentidad.html
+++ b/manualIdentidad.html
@@ -55,7 +55,7 @@
                 <p></p>
                 <p>Este manual de identidad es parte de un proyecto de clase llamado “vista de gigante” que
                     es un (imaginario) festival de cine independiente que se llevaría a cabo cada año proyectado sobre molinos de Castilla La Mancha. Este manual de identidad se hizo para explicar
-                    loso usos de logotipo dinámico del festival.</p>
+                    los usos de logotipo dinámico del festival.</p>
                 <hr>
                 <img src="/porfolio/pdfs a jps/manual de identidad/1.jpg" alt="" class="img-fluid ">
                 <img src="/porfolio/pdfs a jps/manual de identidad/2.jpg" alt="" class="img-fluid ">
