--- a/Fotografia.html
+++ b/Fotografia.html
@@ -11,33 +11,34 @@
     <link rel="stylesheet" media="(max-width: 450px)" href="styles-responsive.css" />
     <link rel="stylesheet" media="(max-width: 1000px)" href="styles-responsive.css" />
     <link rel="stylesheet" media="(min-width: 1000px)" href="styles.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/msy2slw.css">
 </head>
 <body>
     <div class="container-fluid d-flex h-100 flex-column">
         <div class="row">
           <div class="col-xl-6 align-self-center d-flex ">
               <div class="text-base ">
-                <a href="robin.html" class="fotoro"><h3>Robin Hannon Losada</h3></a>  
+                <a href="robin.html" class="fotoro"><h3 id="Ro">Robin Hannon Losada</h3></a>  
                 <hr class="sin">
                 <p>Hola, soy Robin, estudiante de cuarto de diseño gráfico (en la escuela EASD Antonio Faílde)
                     y fotógrafa amateur.</p>
                 <div class="row"> 
                     <div class="col lista">
-                        <a href="" class="text-decoration-none text-dark"><p>Diseño Gráfico</p></a>
+                        <a href="" class="text-decoration-none text-dark"><p class="resalte">Diseño Gráfico</p></a>
                         <ul>
-                            <li><a href="allaprima.html" class="text-decoration-none text-dark">Allaprima</a></li>
-                            <li><a href="infografia.html" class="text-decoration-none text-dark">Infografía</a></li> 
-                            <li><a href="inhiver.html" class="text-decoration-none text-dark">Inhiveler</a></li> 
-                             <li><a href="logoEcuador.html" class="text-decoration-none text-dark">Paso de Ecuador USC</a></li>
-                            <li> <a href="logoUllin.html" class="text-decoration-none text-dark">Logo Uillinn</a></li>
-                             <li><a href="manualIdentidad.html" class="text-decoration-none text-dark">Manual de Identidad</a></li>
-                             <li><a href="Posters.html" class="text-decoration-none text-dark">Pósteres</a></li>
+                            <li><a href="allaprima.html" class="text-decoration-none resalte">Allaprima</a></li>
+                            <li><a href="infografia.html" class="text-decoration-none resalte">Infografía</a></li> 
+                            <li><a href="inhiver.html" class="text-decoration-none resalte">Inhiveler</a></li> 
+                             <li><a href="logoEcuador.html" class="text-decoration-none resalte">Paso de Ecuador USC</a></li>
+                            <li> <a href="logoUllin.html" class="text-decoration-none resalte">Logo Uillinn</a></li>
+                             <li><a href="manualIdentidad.html" class="text-decoration-none resalte">Manual de Identidad</a></li>
+                             <li><a href="Posters.html" class="text-decoration-none resalte">Pósteres</a></li>
                              
                             
                         </ul>
                     </div>
                     <div class="col text-center">
-                        <a href="Fotografia.html" class="text-decoration-none text-dark" id="link-fotos"><p>Fotografía</p></a>
+                        <a href="Fotografia.html" class="text-decoration-none text-dark" id="link-fotos"><p class="resalte">Fotografía</p></a>
                         <ul></ul>
                     </div>
                     <hr class="sin">
