--- a/infografia.html
+++ b/infografia.html
@@ -58,6 +58,8 @@
                     covid que se debía de seguir dentro de la escuela a alumnos recién llegados.</p>
                 <hr>
                 <img src="/porfolio/pdfs a jps/inforgrafía/Infografía final.jpg" alt="" class="img-fluid ">
+                <img src="/porfolio/pdfs a jps/inforgrafía/detalle infografía.jpg" alt="" class="img-fluid ">
+                <img src="/porfolio/pdfs a jps/inforgrafía/detalle infografía 2.jpg" alt="" class="img-fluid ">
               
             </div>
             
