--- a/allaprima.html
+++ b/allaprima.html
@@ -59,6 +59,7 @@
                     Autismo de Ourense, Down Ourense... para llevar a cabo una serie de talleres. Este fue el
                     resultado.</p>
                 <hr>
+                <img src="/porfolio/pdfs a jps/allaprima/allaprima-inicio.jpeg" alt="" class="img-fluid ">
                 <img src="/porfolio/pdfs a jps/allaprima/1.jpg" alt="" class="img-fluid ">
                 <img src="/porfolio/pdfs a jps/allaprima/2.jpg" alt="" class="img-fluid ">
                 <img src="/porfolio/pdfs a jps/allaprima/3.jpg" alt="" class="img-fluid ">
@@ -67,6 +68,7 @@
                 <img src="/porfolio/pdfs a jps/allaprima/6.jpg" alt="" class="img-fluid ">
                 <img src="/porfolio/pdfs a jps/allaprima/7.jpg" alt="" class="img-fluid ">
                 <img src="/porfolio/pdfs a jps/allaprima/8.jpg" alt="" class="img-fluid ">
+                <img src="/porfolio/pdfs a jps/allaprima/allaprima-final.jpeg" alt="" class="img-fluid ">
                
         
             </div>
