--- a/Posters.html
+++ b/Posters.html
@@ -52,6 +52,7 @@
             <div class="fotos">
             <strong class="titulo">Pósteres</strong>
             <hr>
+            <img src="/porfolio/diseño gráfico/posters/poster2.jpeg" alt="" class="img-fluid ">
             <img src="/porfolio/diseño gráfico/posters/poster 1.jpg" alt="" class="img-fluid ">
             <img src="/porfolio/diseño gráfico/posters/robin hannon_  maja punk 2.jpg" alt="" class="img-fluid">
             
